--- a/scss/layout/_general.desktop.scss
+++ b/scss/layout/_general.desktop.scss
@@ -14,6 +14,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  @include fontStyle
 }
 
 @each $number, $color in $gridColors {
